--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:lib="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,8 +10,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.scurrae.chris.loadit.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <com.github.glomadrian.roadrunner.IndeterminateRoadRunner
+        android:id="@+id/two_way"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        lib:movement_loop_time="4000"
+        lib:movement_direction="counter_clockwise"
+        lib:path_color="@color/colorAccent"
+        lib:line_size="0.05"
+        lib:stroke_width="3sp"
+        lib:left_line_animation_time="2800"
+        lib:left_line_max_size="0.5"
+        lib:left_line_animation_start_delay="2500"
+        lib:right_line_animation_start_delay="2000"
+        lib:right_line_max_size="0.5"
+        lib:right_line_animation_time="2000"
+        lib:path_data="@string/github"
+        lib:path_original_width="@integer/github_original_width"
+        lib:path_original_height="@integer/github_original_height"
+        lib:path_animation_type="twoWay"
+        />
+    Material
 </RelativeLayout>
